--- a/server/api/package.json
+++ b/server/api/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "test": "jest",
+    "test:db": "ts-node test-db.ts",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +18,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
     "@solana/web3.js": "^1.98.4",
+    "@supabase/supabase-js": "^2.75.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -42,6 +48,7 @@
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
 }
