--- a/server/anchor/sol-bnb-escrow/programs/sol-bnb-escrow/Cargo.toml
+++ b/server/anchor/sol-bnb-escrow/programs/sol-bnb-escrow/Cargo.toml
@@ -9,20 +9,28 @@ crate-type = ["cdylib", "lib"]
 name = "sol_bnb_escrow"
 
 [features]
-default = []
-cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
-anchor-debug = []
-custom-heap = []
-custom-panic = []
-
+cpi = ["no-entrypoint"]
+default = []
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = "0.32.1"
+anchor-lang = "0.31.1"
+bumpalo = "=3.14.0"
+anchor-spl = "0.31.1"
+
+[dev-dependencies]
+solana-sdk = "=2.3.1"
+solana-program-test = "=2.3.3"
 
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
+
+
+
+
+
+
