Added more frontend functionality and integrate new components
- Added Solana web3.js and vue-datepicker-next dependencies to package.json.
- Updated App.vue to include ConnectWallet and LeaveReviewModal components.
- Replaced the modal for viewing bookings with MyBookingsModal.
- Removed listings.ts and integrated listings management into the Pinia store.
- Updated DashboardView.vue and ListingDetailView.vue to reflect changes in listing data structure.
- Implemented reservation functionality in ReservationView.vue, including date selection and confirmation modal.
- Added a login route to the router configuration and improved registration view with a login link.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,8 +14,10 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
+    "vue-datepicker-next": "^1.0.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
