--- a/server/api/package.json
+++ b/server/api/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "uuid": "^13.0.0"
   },
@@ -43,11 +44,12 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.7.2",
+    "@types/node": "^24.8.0",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
